# rust-web3-project-template

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  client.js  ecosystem.config.js  expand.rs  package.json  pnpm-lock.yaml  prisma.config.ts
.github/workflows/: main.yml
crates/cmacro/: Cargo.toml
crates/cmacro/src/: lib.rs
crates/database/prisma/: schema.prisma
crates/database/src/: lib.rs
crates/database/src/entities/: log_memo.rs  mod.rs  setting.rs  signature.rs  signing_message.rs  user.rs
crates/database/src/repositories/: log_memos.rs  mod.rs  settings.rs  signatures.rs  signing_messages.rs  users.rs
crates/evm/: Cargo.toml
crates/evm-scanner/: Cargo.toml
crates/evm-scanner/src/: main.rs
crates/evm-stream/: Cargo.toml
crates/evm-stream/src/: extrator.rs  lib.rs  main.rs
crates/evm/src/: client.rs  lib.rs  uniswap_v3.rs
crates/http-server/: Cargo.toml
crates/http-server/docs/: openapi.html  openapi.yml
crates/http-server/src/: exception.rs  main.rs
crates/http-server/src/common/: jwt.rs
crates/http-server/src/extractors/: auth.rs
crates/http-server/src/handlers/: mod.rs
crates/http-server/src/handlers/auth/: mod.rs  req_signing_msg.rs  sign_in_evm.rs  sign_in_sol.rs
crates/http-server/src/handlers/users/: me.rs  mod.rs  sign_in.rs
crates/http-server/src/handlers/ws/: random_u64.rs
crates/shared/: Cargo.toml
crates/shared/src/: arg.rs  env.rs  lib.rs  result.rs  tracing.rs  util.rs  validators.rs
crates/sol-scanner/: Cargo.toml
crates/sol-stream/: Cargo.toml
crates/solana/: Cargo.toml
crates/solana-scanner/: Cargo.toml
crates/solana-scanner/src/: cursor.rs  handler.rs  main.rs  signature.rs
crates/solana-stream/: Cargo.toml
crates/solana-stream/src/: extrator.rs  handler.rs  main.rs
crates/solana/src/: fetcher.rs  lib.rs
crates/solana/src/bo/: mod.rs  pda.rs  program.rs
crates/solana/src/bo/account/: market_account.rs  mod.rs
crates/solana/src/bo/event/: mod.rs  postion_opened.rs  postion_settled.rs
crates/solana/src/bo/instruction/: mod.rs  open_position.rs
crates/ws-client/: Cargo.toml
crates/ws-client/src/: frame.rs  handshake.rs  lib.rs  main.rs  tls.rs
evm/lib/: Cargo.toml
evm/lib/src/: client.rs  lib.rs  uniswap_v2.rs  uniswap_v3.rs
evm/scanner/: Cargo.toml
evm/scanner/src/: main.rs
evm/stream/: Cargo.toml
evm/stream/src/: extrator.rs  lib.rs  main.rs
solana/lib/: Cargo.toml
solana/lib/idls/: pumpfun.json
solana/lib/src/: lib.rs
solana/scanner/: Cargo.toml
solana/scanner/src/: cursor.rs  handler.rs  main.rs  signature.rs
solana/stream/: Cargo.toml
solana/stream/src/: extrator.rs  handler.rs  lib.rs  main.rs
