[workspace]
resolver = "2"

members = ["crates/*"]

[workspace.dependencies]
# tracing
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-error = { version = "0.2.1" }
tracing = { version = "0.1.41" }

# runtime
tokio = { version = "1.48.0", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "net",
] }
futures-util = { version = "0.3.31" }

# error handling
thiserror = { version = "2.0.15" }

# database and orm
sea-orm = { version = "1.1.19", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "sea-orm-internal",
] }

# env 
dotenv = { version = "0.15.0" }

# http server
axum = { version = "0.8.8", features = ["macros"] }
axum-macros = { version = "0.5.0" }
axum-extra = { version = "0.12.3", features = ["typed-header"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tower = { version = "0.5.2" }

# serialize and deserialize
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.146" }

# validator
validator = { version = "0.20.0", features = ["derive"] }

# jwt
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }

# websocket
fastwebsockets = { version = "0.10.0", features = ["with_axum", "upgrade"] }

# rand
rand = { version = "0.9.2" }

# http client
hyper = { version = "1.8.1" }
hyper-util = { version = "0.1.19", features = ["tokio"] }
http-body-util = { version = "0.1.3" }
url = { version = "2.5.7" }

# bytes
bytes = { version = "1.11.0" }

# tls
tokio-rustls = { version = "0.26.4" }
webpki-roots = { version = "1.0.4" }
