[workspace]
resolver = "2"

members = ["crates/*"]

[workspace.dependencies]
# tracing
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-error = { version = "0.2.1" }
tracing = { version = "0.1.41" }

# runtime
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "net",
] }
futures-util = { version = "0.3.31" }

# error handling
thiserror = { version = "2.0.15" }

# database and orm
sea-orm = { version = "1.1.19", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "sea-orm-internal",
] }

# env 
dotenv = { version = "0.15.0" }

# http server
axum = { version = "0.8.8", features = ["macros"] }
axum-macros = { version = "0.5.0" }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tower = { version = "0.5.2" }

# serialize and deserialize
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

# validator
validator = { version = "0.20.0", features = ["derive"] }

# jwt
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }

# websocket
fastwebsockets = { version = "0.10.0", features = ["with_axum", "upgrade"] }

# rand
rand = { version = "0.9.2" }

# http client
hyper = { version = "1.8.1" }
hyper-util = { version = "0.1.19", features = ["tokio"] }
http-body-util = { version = "0.1.3" }
url = { version = "2.5.7" }

# bytes
bytes = { version = "1.11.0" }

# tls
tokio-rustls = { version = "0.26.4" }
webpki-roots = { version = "1.0.5" }

# solana
# solana-client = { version = "3.1.5" }
# solana-sdk = { version = "3.0.0" }
# solana-transaction-status = { version = "3.1.5" }
# solana-commitment-config = { version = "3.1.0" }
# spl-associated-token-account-interface = { version = "2.0.0" }
# spl-token-2022-interface = { version = "2.1.0" }
# solana-system-interface = { version = "3.0.0" }
# spl-token-interface = { version = "2.0.0" }
# solana-compute-budget-interface = { version = "3.0.0" }
# borsh = { version = "1.6.0" }
# bs58 = { version = "0.5.1" }

# evm
# alloy = { version = "1.2.1" }
# alloy-chains = { version = "0.2.24", features = ["serde"] }
