[package]
name = "evm-scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
alloy = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }

evm = { path = "../evm" }
evm-stream = { path = "../evm-stream" }
shared = { path = "../shared" }
database = { path = "../database" }
