[package]
name = "solana-scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
solana-commitment-config = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

shared = { path = "../shared" }
database = { path = "../database" }
solana = { path = "../solana" }
