[package]
name = "solana"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-sdk = { workspace = true }
borsh = { workspace = true }
solana-client = { workspace = true }
base64 = { workspace = true }
solana-system-interface = { workspace = true }
spl-associated-token-account-interface = { workspace = true }
strum = { workspace = true }

shared = { path = "../shared" }
cmacro = { path = "../cmacro" }
